--- a/14001-h/14001-h.htm
+++ b/14001-h/14001-h.htm
@@ -393,7 +393,7 @@ Betty and her lap-dog. I've lost since ever I saw them last.&quot;</p>
 <br />
 
 <p>Sadler's Wells, on this mild and cheery spring morning, was a scene of
-fashion and of folly. Hither came the elite of London, after the custom
+fashion and of folly. Hither came the élite of London, after the custom
 of the day, to seek remedy in the reputed qualities of the springs for
 the weariness and lassitude resultant upon the long season of polite
 dissipations which society demanded of her votaries. Bewigged dandies,
@@ -1370,7 +1370,7 @@ the trade and the credit of the realm would not suffer. The money of the
 country would be withdrawn from the use of the country only that short
 time wherein it was in process of counting. This, it occurs to me, would
 surely be a practical method, and could work harm to none.&quot; My Lord
-Somers sat back, pulling out his chest complacently.</p>
+Somers sat back, puffing out his chest complacently.</p>
 
 <p>&quot;Sir Isaac,&quot; said Montague, &quot;and Mr. Locke, we must beg you to find such
 fault as you may with this plan which my Lord Keeper hath suggested.&quot;</p>
@@ -2229,7 +2229,7 @@ so.&quot;</p>
 <p>&quot;Pish, man! You must not jest with me in such a case as this. 'Tis no
 masquerading. Let me tell you, Wilson has a vicious sword, and a temper
 no less vicious. You have touched him on his very sorest spot. He has
-gone to meet you this vary hour. His coach will be at Bloomsbury Square
+gone to meet you this very hour. His coach will be at Bloomsbury Square
 this afternoon, and there he will await you. I promise you he is eager
 as yourself. 'Tis too late now to accommodate this matter, even had you
 not sent back so prompt and bold an answer.&quot;</p>
@@ -2550,7 +2550,7 @@ still sat wringing his hands in an agony of perturbation.</p>
 <p>&quot;Jack, Jack!&quot; cried Will Law, &quot;Oh, heavens! You have killed him! You
 have killed a man! What shall we do?&quot;</p>
 
-<p>Law Raised his head and looked his brother in the face, but seemed
+<p>Law raised his head and looked his brother in the face, but seemed
 scarce to hear him. Half mechanically he was fumbling in the side pocket
 of his coat. He drew forth from it now a peculiar object, at which he
 gazed intently and half in curiosity, It was the little beaded shoe of
@@ -2637,7 +2637,7 @@ another, till at length he reached the jailer who adjudged himself fit
 to pass upon the stolid demand that the messenger be admitted with the
 parcel for John Law, Esquire, late of Bradwell Street, marked urgent,
 and collect fifty sovereigns. The humor of all this appealed to the
-Jailer mightily.</p>
+jailer mightily.</p>
 
 <p>&quot;Send him along,&quot; he said. And the boy came in, much dismayed but still
 faithful to his trust.</p>
@@ -2660,7 +2660,7 @@ like the rest, and happen it fits him, very well. Take back your box,
 boy&mdash;or stay, let's have a look in't.&quot;</p>
 
 <p>The jailer was a man not devoid of wisdom. Fine clothes sometimes went
-with a long purse, and a long purge might do wonders to help the comfort
+with a long purse, and a long purse might do wonders to help the comfort
 of any prisoner in London, as well as the comfort of his keeper. Truly
 his eyes opened wide as he saw the contents of the box. He felt the
 lapel of the coat, passing it approvingly between his thumb and finger.
@@ -3895,7 +3895,7 @@ craft along over the curling blue waves of the great inland sea. And now
 their voices in one accord fell into the cadences of an ancient
 boat-song of New France:</p>
 
-<span style='margin-left: 2em;'>&quot;<i>En roulant ma loule, roulant,</i></span><br />
+<span style='margin-left: 2em;'>&quot;<i>En roulant ma boule, roulant,</i></span><br />
 <span style='margin-left: 2.25em;'><i>Roulant, rouler, ma boule roulant</i>.&quot;</span><br />
 
 <p>The ictus of the measure marked time for the sweeping paddles, and
@@ -4091,7 +4091,7 @@ trees, as though with a hand contemptuous in its strength, forbearing
 only by reason of its own whimsy. Now and again the cohorts of the
 clouds just hinted at parting, letting through a pale radiance from the
 western sky, where lingered the departing day. This light, as did the
-illuminating glare of the forked flames above, disclosed the while
+illuminating glare of the forked flames above, disclosed the white
 helmets of the trooping waters, rushing on with thunderous unison of
 tread; and the rattling thunder-shocks, intermittent, though coming
 steadily nearer, served but to emphasize these foot strokes of the
@@ -4210,7 +4210,7 @@ know!</p>
 <p>&quot;Holy God! what was it? What was that which passed?&quot; cried Jean
 Breboeuf, crawling out from beneath his shelter. &quot;Saint Mary defend us
 all this night! 'Twas the great Canoe of the Damned, running <i>au large</i>
-across the sky! Mary, Mother of God, hear my vow! Prom this time Jean
+across the sky! Mary, Mother of God, hear my vow! From this time Jean
 Breboeuf shall lead a better life!&quot;</p>
 
 <p>The storm, baffled, passed on. The rain, unsatisfied, sullenly ceased in
@@ -4850,7 +4850,7 @@ gardener for the post!&quot;</p>
 despair. &quot;Were I not the bravest man in all New France I should leave
 you at this moment. It is mad, quite mad you are, every one of you! I,
 Jean Breboeuf, will remain, and, if necessary, will protect. Corn, and
-perhaps the bean, ye shall have; perhaps oven some of those little roots
+perhaps the bean, ye shall have; perhaps even some of those little roots
 that the savages dig and eat; but, look you, this is but because you are
 with one who is brave. <i>Enfin</i>, I go. I bend me to the hoe, here in this
 place, like any peasant.&quot;</p>
@@ -4885,7 +4885,7 @@ supplanting the other, yet availing itself of that other. As the white
 men took over the crude fields of the departed savages, so also they
 appropriated the imperfect edifice which the conquerors of those savages
 had left for them. It was in little the story of old England herself,
-builded upon the races and the ruins of Briton, and Koman, and Saxon, of
+builded upon the races and the ruins of Briton, and Roman, and Saxon, of
 Dane and Norman.</p>
 
 <p>Under the direction of Law, the walls of the old war house were
@@ -4962,8 +4962,8 @@ till the indefinite enlargement showed at length the incipient ear.</p>
 
 <p>He noted the faint brown of the ends of the sweetly-enveloping silk of
 the ear, pale-green and soft underneath the sheltering and protecting
-husk, He found the sweet and milk-white tender kernels, row upon row,
-forming rapidly beneath the husk, Mud saw at length the hardening and
+husk. He found the sweet and milk-white tender kernels, row upon row,
+forming rapidly beneath the husk, and saw at length the hardening and
 darkening of the husk at its free end, which told that man might pluck
 and eat.</p>
 
@@ -6100,7 +6100,7 @@ of those elements which made her, and the character of the conflict
 which now went on within her soul. Tell such a woman as Mary Connynge
 that she has a rival, and she will either love the more madly the man
 whom she demands as her own, or with equal madness and with greater
-intensity will hate her lover with a hatred untying and unappeasable.</p>
+intensity will hate her lover with a hatred undying and unappeasable.</p>
 
 <p>Mary Connynge stood, her eyes glancing from one to the other of the men
 before her. She had seen them both proved brave men, strong of arm,
@@ -6222,7 +6222,7 @@ midstream.</p>
 
 <p>The hands of the great waters grasped the frail cockleshell, twisted it
 about, tossed it, played with it, and claimed it irrevocably for their
-own. For a few moments it was visible as it passed on down, with the
+own. For a few moments it was visible as it passed on down with the
 resistless current of the mighty stream. Almost at the verge of the
 plunge, the eyes watching from the shore saw at a distance the struggle
 made by the victim. He half raised himself in the boat and threw himself
@@ -7649,7 +7649,7 @@ comes of confidence. It is fate, necessity, which demands a new system.
 The world has grown too much for every man to put his sixpence into the
 other man's hand, and carry away in a basket what he buys. We are no
 longer savages, to barter beads for hides. Yet we were as savages, did
-we not come to realize that this insufficient coin must be replaced, in
+we not come to realize that this insufficient coin must be replaced in
 the evolution of affairs, just as barter has long ago been, replaced.&quot;</p>
 
 <p>&quot;And by what?&quot;</p>
@@ -7886,7 +7886,7 @@ many of his kind gathered so quickly within the last few weeks in Paris,
 even as the scent of carrion fetches ravens to the feast. Another of the
 party was a man of middle age, of handsome, calm, patrician features and
 an unruffled mien&mdash;that De la Chaise, nephew of the confessor of Louis
-the Grand, who Was later to represent the young king in the provinces of
+the Grand, who was later to represent the young king in the provinces of
 Louisiana.</p>
 
 <p>Near by the latter, and indeed the central figure of this gathering, was
@@ -8002,7 +8002,7 @@ excitement.</p>
 <p>&quot;Assuredly. Yet I am telling not half of the news which came to my
 knowledge this very morning&mdash;the story is said to have emanated from the
 Palais Royal itself, and therefore, no doubt, is to be traced to this
-game unknown queen of the Messasebe. She reports, so it is said, that
+same unknown queen of the Messasebe. She reports, so it is said, that
 beyond the country where L'Huillier secured his cargo of blue earth,
 there is a land where grows a most peculiar plant. The meadows and
 fields are covered with it, and it is said that the dews of night, which
@@ -8368,7 +8368,7 @@ timid and diffident, approached her.</p>
 your feet, by heaven! he can well-nigh do so now. See! Here are some of
 the properties he has lately purchased in the realm of France. The
 Marquisat d'Effiat&mdash;'tis worth eight hundred thousand livres; the estate
-of Riviere&mdash;worth nine hundred thousand livres; the estate of
+of Rivière&mdash;worth nine hundred thousand livres; the estate of
 Roissy&mdash;worth six hundred and fifty thousand livres; the estates of
 Berville, of Fontaine, of Yville, of Gerponville, of Tancarville, of
 Guermande&mdash;the tale runs near a score! Lately my brother has purchased
@@ -8616,7 +8616,7 @@ the day it was but that these affairs of state might give to him the
 means to indulge fancies of his own. Alike shrewd and easy, alike
 haughty and sensuous, here it was that Philippe held his real court.</p>
 
-<p>These young gentlemen of Prance, these <i>rou&eacute;s</i> who have come to meet
+<p>These young gentlemen of France, these <i>rou&eacute;s</i> who have come to meet
 Philippe at his little supper&mdash;how different from the same beings under
 the rule of the Grand Monarque. Their coats are no longer dark in hue.
 Their silks and velvets have blossomed out, even as Paris has blossomed
@@ -8881,11 +8881,11 @@ visible even beneath its rouge and patches. She half turned, as though
 to push back her chair from the board, would have arisen, would have
 spoken perhaps; yet act and gesture were at the time unnoticed.</p>
 
-<p>&quot;His Excellency, Monsieur Jean L'as, <i>le contr&ocirc;-leur-g&eacute;n&eacute;ral</i>,&quot; came the
+<p>&quot;His Excellency, Monsieur Jean L'as, <i>le contr&ocirc;leur-g&eacute;n&eacute;ral</i>,&quot; came the
 soft tones of the attendant near the door. &quot;Monsieur Guillaume L'as,
 brother of the <i>contr&ocirc;leur-g&eacute;n&eacute;ral</i>.&quot;</p>
 
-<p>The eyes of all were turned toward the door.. Every petted bolle of
+<p>The eyes of all were turned toward the door. Every petted belle of
 Paris there assembled shifted bodily in her seat, turning her gaze upon
 that man whose reputation was the talk of all the realm of France.</p>
 
@@ -9440,7 +9440,7 @@ the eyes of the world. You may well call me master of your fate, who
 have been able to accomplish these things. So long as you knew your
 master, you did well. Now your Grace has seen fit to change masters. He
 would be his own master again. There can not be two in control of a
-concern like this. Sir, the two minutes hare elapsed. I am your very
+concern like this. Sir, the two minutes have elapsed. I am your very
 humble servant!&quot;</p>
 
 <p>The regent still sat staring from his chair, and speech was yet denied
@@ -9812,9 +9812,9 @@ System, there crowded from the outer purlieus yet other thousands of
 excited human beings. The end had come. The bubble had burst. There was
 no longer any System of the Messasebe!</p>
 
-<p>It was late in the day, in fact well on toward might, when the knowledge
+<p>It was late in the day, in fact well on toward night, when the knowledge
 of the crash came into the neighborhood where dwelt the Lady Catharine
-Knolls. To her the news was brought by a servant, who excitedly burst
+Knollys. To her the news was brought by a servant, who excitedly burst
 unannounced into her mistress's presence.</p>
 
 <p>&quot;Madame! Madame!&quot; she cried. &quot;Prepare! 'Tis horrible! 'Tis impossible!
@@ -10006,7 +10006,7 @@ face.</p>
 <p>&quot;But, Monsieur, I do not understand.&quot;</p>
 
 <p>&quot;We shall not need more than fifty louis. That is enough. Leave the
-rest,&quot; said Law. &quot;Leave it where you found it&quot;</p>
+rest,&quot; said Law. &quot;Leave it where you found it.&quot;</p>
 
 <p>&quot;But for whom? Does Monsieur soon return?&quot;</p>
 
@@ -10014,7 +10014,7 @@ rest,&quot; said Law. &quot;Leave it where you found it&quot;</p>
 without, these same people whom I have enriched, and who now will claim
 that I have impoverished them&mdash;these people will demand of me everything
 that I have. As a man of honor I can not deny them. They shall have
-every Jot and stiver of the property of John Law, even the million or so
+every jot and stiver of the property of John Law, even the million or so
 of good coin which he brought here to Paris with him. The coat on my
 back, the wheels beneath me, gold enough to pay for the charges of the
 inns through France&mdash;that is all that John Law will take away with him.&quot;</p>
@@ -10057,7 +10057,7 @@ better master.&quot;</p>
 <p>&quot;It is not so with certain others. They think me a hard master enough,
 and having displaced me, will do all they can to punish me. But now,
 Henri, you will perhaps need to look elsewhere for a master. I am going
-far away&mdash;perhaps across the seas. It may he&mdash;but I know not where and
+far away&mdash;perhaps across the seas. It may be&mdash;but I know not where and
 care not where my foot may wander hereafter, nor will I seek now to plan
 for it. As for you, Henri, since you admit you have been thus blind to
 your own interests, let us look to that. Go to the desk again. Take out
@@ -10300,7 +10300,7 @@ you have stolen.&quot;</p>
 yet have I stolen it. If you have suffered by this foolish panic, you do
 not mend matters by thus treating me. By heaven, you go the wrong way to
 get anything from me! Out of the way, you <i>canaille!</i> Do you think to
-frighten me? I made your city. I made you all Now, do you think to
+frighten me? I made your city. I made you all. Now, do you think to
 frighten me, John Law?&quot;</p>
 
 <p>&quot;Oh! You would go away, you want to escape!&quot; cried the voices of those
